src/test/deca/context/valid/ext/TAB_access.deca
{
   int[][] a = new int [2][659];
   float[][] b = new float [2][165];
   int[] c = new int [2];
   float[] d = new float [2];
   (a[0])[2];
   b[0][0];
   c[0];
   d[5];
   ((a[0]));
   b[(0)][0];
   b[(54*654)];
   c;
   d;
   a;
   b;
}
