src/test/deca/context/invalid/ext/TAB_match_dim5.deca
{
    int[][] a = new int[2][3];
    int[] b = a;
}